[package]
name = "egg_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"] # cdylib needs to be first for api_test.rs

[dependencies]
egg = "0.9.3"
num-traits = "0.2.18"
ordered-float = "4.2.0"

[dev-dependencies]
dlopen2 = "0.7.0"
test-cdylib = "1.1.0"
